# Serial-Studio-ROS

./: .gitignore  CMakeLists.txt  README.md  Serial-Studio.pro  USER.md  package.xml  类框图.drawio
assets/: Resources.qrc
assets/messages/: Welcome_EN.txt  Welcome_ZH.txt
assets/qml/: main.qml
assets/qml/FramelessWindow/: CustomWindow.qml
assets/qml/Panes/: Debug.qml  Ros2Ws.qml  Setup.qml  Toolbar.qml
assets/qml/Panes/SetupPanes/: Hardware.qml  Ros2.qml
assets/qml/Panes/SetupPanes/Devices/: Ros.qml
assets/qml/PlatformDependent/: Menubar.qml
assets/qml/Widgets/: Terminal.qml
assets/qml/Windows/: MainWindow.qml  ProjectEditor.qml
libs/QSourceHighlite/: mainwindow.ui
src/: AppInfo.h  main.cpp
src/IO/: Console.cpp  Console.h  Manager.cpp  Manager.h
src/IO/Drivers/: Ros.cpp  Ros.h  Serial.cpp
src/Misc/: ModuleManager.cpp
src/Plugins/: Server.cpp
src/ROS/: QNode.cpp  QNode.h
src/UI/: RvizWidget.cpp  RvizWidget.h
src/UI/Widgets/: Terminal.cpp  Terminal.h
